...
                android:layout_marginTop="5dp"
                android:layout_weight="3"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addNewServiceBtn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:background="@drawable/add_icon"
                    android:onClick="onClickAddNewService"
                    android:shadowColor="#A8CACACA"
...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#000000"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

...
