...
                    android:id="@+id/newServiceNameEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="50sp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border"
                    android:ems="10"
                    android:hint="Name"
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:textColorHint="@color/hintColour" />
            </LinearLayout>

            <LinearLayout
...
