...
                android:layout_marginTop="30dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_rounded"
                android:maxHeight="48dip"
                android:minHeight="48dip"
                android:onClick="savedButtonClicked"
                android:text="Save"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
